feat: 前端ui完善，支持上传RAG文件

--- a/SpringAIDemo/src/main/resources/application.yml
+++ b/SpringAIDemo/src/main/resources/application.yml
@@ -8,6 +8,10 @@ logging:
 spring:
   application:
     name: SpringAIDemo
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   ai:
     ollama:
       base-url: http://10.160.4.68:11434
