--- a/SpringAIDemo/src/main/resources/application.yml
+++ b/SpringAIDemo/src/main/resources/application.yml
@@ -12,6 +12,11 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springai?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
   ai:
     ollama:
       base-url: http://10.160.4.68:11434
@@ -33,3 +38,19 @@ spring:
         indexType: IVF_FLAT
         metricType: COSINE
         initialize-schema: true
+    chat:
+      memory:
+        repository:
+          jdbc:
+            initialize-schema: always
+            schema: classpath:schema-mysql.sql
+jwt:
+  user-secret-key: u1kP3vZ7jH9Df+2QZqfy1zSBl3F4W8NtV5HrOXLeElU=
+  user-ttl: 7200000
+  user-token-name: token
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.example.SpringAIDemo.entity
+  configuration:
+    map-underscore-to-camel-case: true
