feat: conversation功能，用户可以选择不同的对话，对话有历史记录功能

--- a/SpringAIDemo/src/main/resources/application.yml
+++ b/SpringAIDemo/src/main/resources/application.yml
@@ -47,7 +47,7 @@ spring:
 jwt:
   user-secret-key: u1kP3vZ7jH9Df+2QZqfy1zSBl3F4W8NtV5HrOXLeElU=
   user-ttl: 7200000
-  user-token-name: token
+  user-token-name: Authorization
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
